--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 							<li><a href="https://twitter.com/Yagmur112358" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
 							<li><a href="https://www.instagram.com/yagmurdllcengiz/" class="icon brands fa-instagram-f"><span class="label">Instagram</span></a></li>
 							<li><a href="https://github.com/yagmurcengiz " class="icon brands fa-github"><span class="label">Github</span></a></li>
-							<li><a href="https://www.linkedin.com/in/ya%C4%9Fmur-delal-cengiz-6930aa208/" class="icon brands fa-linkedIn"><span class="label">LinkedIn</span></a></li>
+							<li><a href="https://www.linkedin.com/in/ya%C4%9Fmur-delal-cengiz-6930aa208/" class="icon brands fa-linkedin"><span class="label">LinkedIn</span></a></li>
 							<li><a href="mailto:yagmurdllcengiz27@gmail.com" class="icon solid fa-envelope"><span class="label">Email</span></a></li>
 						</ul>
 
