--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
 					<!-- Logo -->
 						<div id="logo">
-							<span class="image avatar48"><img src="images/avatar.jpg" alt="" /></span>
+							<span class="image avatar48"><img src="images/avatar.png" alt="" /></span>
 							<h1 id="title">Yagmur Delal Cengiz</h1>
 							<p>Entrepreneur / STEM Student</p>
 						</div>
@@ -89,7 +89,7 @@
 							<div class="row">
 								<div class="col-4 col-12-mobile">
 									<article class="item">
-										<a href="#" class="image fit"><img src="images/pic02.jpg" alt="" /></a>
+										<a href="#" class="image fit"><img src="images/pic02.png" alt="" /></a>
 										<header>
 											<h3>Ipsum Feugiat</h3>
 										</header>
