--- a/index.html
+++ b/index.html
@@ -60,14 +60,15 @@
 						<div class="container">
 
 							<header>
-								<h2 class="alt">Hi! I'm <strong>Prologue</strong>, a <a href="http://html5up.net/license">free</a> responsive<br />
-								site template designed by <a href="http://html5up.net">HTML5 UP</a>.</h2>
-								<p>Ligula scelerisque justo sem accumsan diam quis<br />
-								vitae natoque dictum sollicitudin elementum.</p>
+								<h2 class="alt"><strong>Hello and welcome to my personal website!</strong></h2>
+								<p> Explore my journey and accomplishments in the "Portfolio" section—you can jump to it through the button below. Don't forget to take a moment to delve into my statement, sharing insights into my experiences and aspirations.
+
+									Feel free to connect with me through social media—my accounts are located at the bottom left. Alternatively, for a more direct conversation, drop me an email by sharing your message in the Contact section. I look forward to engaging with you!
+									</p>
 							</header>
 
 							<footer>
-								<a href="#portfolio" class="button scrolly">Magna Aliquam</a>
+								<a href="#portfolio" class="button scrolly">Portfolio</a>
 							</footer>
 
 						</div>
