--- a/index.html
+++ b/index.html
@@ -60,8 +60,8 @@
 						<div class="container">
 
 							<header>
-								<h2 class="alt"><strong>Hello and welcome to my personal website!</strong></h2>
-								<p> Explore my journey and accomplishments in the "Portfolio" section—you can jump to it through the button below. Don't forget to take a moment to delve into my statement, sharing insights into my experiences and aspirations.
+								<h2 class="alt"><strong>Hello and Welcome to My Personal Website!</strong></h2>
+								<p color="white"> Explore my journey and accomplishments in the "Portfolio" section—you can jump to it through the button below. Don't forget to take a moment to delve into my statement, sharing insights into my experiences and aspirations.
 
 									Feel free to connect with me through social media—my accounts are located at the bottom left. Alternatively, for a more direct conversation, drop me an email by sharing your message in the Contact section. I look forward to engaging with you!
 									</p>
