--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 					<!-- Logo -->
 						<div id="logo">
 							<span class="image avatar48"><img src="images/avatar.png" alt="" /></span>
-							<h1 id="title">Yagmur Delal Cengiz</h1>
+							<h1 id="title">Yagmur D. Cengiz</h1>
 							<p>Entrepreneur / STEM Student</p>
 						</div>
 
@@ -82,23 +82,20 @@
 								<h2>Portfolio</h2>
 							</header>
 
-							<p>Vitae natoque dictum etiam semper magnis enim feugiat convallis convallis
-							egestas rhoncus ridiculus in quis risus amet curabitur tempor orci penatibus.
-							Tellus erat mauris ipsum fermentum etiam vivamus eget. Nunc nibh morbi quis
-							fusce hendrerit lacus ridiculus.</p>
+							<p>This section highlights a myriad of achievements I've earned and initiatives I've spearheaded during my high school years. From noteworthy accomplishments to impactful projects, discover the essence of my journey in this space.</p>
 
 							<div class="row">
 								<div class="col-4 col-12-mobile">
 									<article class="item">
-										<a href="#" class="image fit"><img src="images/pic02.png" alt="" /></a>
+										<a href="https://www.theearthprize.org/the-earth-prize-2023" class="image fit"><img src="images/pic02.png" alt="" /></a>
 										<header>
-											<h3>Ipsum Feugiat</h3>
+											<h3>The Earth Prize 2023 Winner Team</h3>
 										</header>
 									</article>
 									<article class="item">
-										<a href="#" class="image fit"><img src="images/pic03.jpg" alt="" /></a>
+										<a href="https://eu.credential.net/1e675e60-4f13-4240-a3f6-ebb7fa45bbd0" class="image fit"><img src="images/pic03.jpg" alt="" /></a>
 										<header>
-											<h3>Rhoncus Semper</h3>
+											<h3>Rise Challange 2023 Finalist</h3>
 										</header>
 									</article>
 								</div>
@@ -106,13 +103,13 @@
 									<article class="item">
 										<a href="#" class="image fit"><img src="images/pic04.jpg" alt="" /></a>
 										<header>
-											<h3>Magna Nullam</h3>
+											<h3>Hevsel Press Co-Founder</h3>
 										</header>
 									</article>
 									<article class="item">
-										<a href="#" class="image fit"><img src="images/pic05.jpg" alt="" /></a>
+										<a href="https://drive.google.com/file/d/1mUVdZw-Xu2kthWUs_6Jskr9zweo6PYad/view?usp=sharing" class="image fit"><img src="images/pic05.jpg" alt="" /></a>
 										<header>
-											<h3>Natoque Vitae</h3>
+											<h3>Climate Science Olympiad Bronze Medal</h3>
 										</header>
 									</article>
 								</div>
@@ -120,13 +117,13 @@
 									<article class="item">
 										<a href="#" class="image fit"><img src="images/pic06.jpg" alt="" /></a>
 										<header>
-											<h3>Dolor Penatibus</h3>
+											<h3>FRC Inspiring Team</h3>
 										</header>
 									</article>
 									<article class="item">
 										<a href="#" class="image fit"><img src="images/pic07.jpg" alt="" /></a>
 										<header>
-											<h3>Orci Convallis</h3>
+											<h3>FLL National Champion</h3>
 										</header>
 									</article>
 								</div>
