--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
 										</header>
 									</article>
 									<article class="item">
-										<a href="https://eu.credential.net/1e675e60-4f13-4240-a3f6-ebb7fa45bbd0" class="image fit"><img src="images/pic03.jpg" alt="" /></a>
+										<a href="https://eu.credential.net/1e675e60-4f13-4240-a3f6-ebb7fa45bbd0" class="image fit"><img src="images/pic03.png" alt="" /></a>
 										<header>
 											<h3>Rise Challange 2023 Finalist</h3>
 										</header>
@@ -101,13 +101,13 @@
 								</div>
 								<div class="col-4 col-12-mobile">
 									<article class="item">
-										<a href="#" class="image fit"><img src="images/pic04.jpg" alt="" /></a>
+										<a href="#" class="image fit"><img src="images/pic04.png" alt="" /></a>
 										<header>
 											<h3>Hevsel Press Co-Founder</h3>
 										</header>
 									</article>
 									<article class="item">
-										<a href="https://drive.google.com/file/d/1mUVdZw-Xu2kthWUs_6Jskr9zweo6PYad/view?usp=sharing" class="image fit"><img src="images/pic05.jpg" alt="" /></a>
+										<a href="https://drive.google.com/file/d/1mUVdZw-Xu2kthWUs_6Jskr9zweo6PYad/view?usp=sharing" class="image fit"><img src="images/pic05.png" alt="" /></a>
 										<header>
 											<h3>Climate Science Olympiad Bronze Medal</h3>
 										</header>
@@ -115,13 +115,13 @@
 								</div>
 								<div class="col-4 col-12-mobile">
 									<article class="item">
-										<a href="#" class="image fit"><img src="images/pic06.jpg" alt="" /></a>
+										<a href="https://www.instagram.com/frc_hevsel8784/" class="image fit"><img src="images/pic06.png" alt="" /></a>
 										<header>
-											<h3>FRC Inspiring Team</h3>
+											<h3>FRC Team Spirit Award</h3>
 										</header>
 									</article>
 									<article class="item">
-										<a href="#" class="image fit"><img src="images/pic07.jpg" alt="" /></a>
+										<a href="#" class="image fit"><img src="images/pic07.png" alt="" /></a>
 										<header>
 											<h3>FLL National Champion</h3>
 										</header>
