--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
 										</header>
 									</article>
 									<article class="item">
-										<a href="#" class="image fit"><img src="images/pic07.png" alt="" /></a>
+										<a href="https://www.instagram.com/p/CQJAOJwhEwj/?img_index=3" class="image fit"><img src="images/pic07.png" alt="" /></a>
 										<header>
 											<h3>FLL National Champion</h3>
 										</header>
@@ -142,12 +142,9 @@
 
 							<a href="#" class="image featured"><img src="images/pic08.jpg" alt="" /></a>
 
-							<p>Tincidunt eu elit diam magnis pretium accumsan etiam id urna. Ridiculus
-							ultricies curae quis et rhoncus velit. Lobortis elementum aliquet nec vitae
-							laoreet eget cubilia quam non etiam odio tincidunt montes. Elementum sem
-							parturient nulla quam placerat viverra mauris non cum elit tempus ullamcorper
-							dolor. Libero rutrum ut lacinia donec curae mus vel quisque sociis nec
-							ornare iaculis.</p>
+							<p>Hi! I'm Yagmur Delal Cengiz, a high school junior at Diyarbakir Bahcesehir Science and Technology College. I have a passion for physics and mathematics, dedicated to advancing my knowledge in these subjects. What fuels my drive is the desire to contribute to the betterment of my community, particularly in aspects it is suppressed or underdeveloped. Through various projects, I have endeavored to address pressing global issues, yet I am committed to augmenting the scale of my impact in the following years. Embracing the role of an entrepreneur, I find joy in maximizing project efficiency, crafting future plans, and developing business strategies, even for the simplest of my endeavors. I believe that entrepreneurship is the sole way of creating sustainable change.
+
+								In my leisure time, I find solace in drawing and listening to music. Beyond my academic and entrepreneurial pursuits, I am a challenging chess player and an avid player on our local basketball team. Additionally, I enjoy drawing comics with friends. Do not hesitate to contact me regarding anything—from more information on my projects to engaging in discussions, even if it involves debating whether cats are anarchists.</p>
 
 						</div>
 					</section>
@@ -160,12 +157,9 @@
 								<h2>Contact</h2>
 							</header>
 
-							<p>Elementum sem parturient nulla quam placerat viverra
-							mauris non cum elit tempus ullamcorper dolor. Libero rutrum ut lacinia
-							donec curae mus. Eleifend id porttitor ac ultricies lobortis sem nunc
-							orci ridiculus faucibus a consectetur. Porttitor curae mauris urna mi dolor.</p>
+							<p></p>
 
-							<form method="post" action="#">
+							<form method="post" action="">
 								<div class="row">
 									<div class="col-6 col-12-mobile"><input type="text" name="name" placeholder="Name" /></div>
 									<div class="col-6 col-12-mobile"><input type="text" name="email" placeholder="Email" /></div>
@@ -188,7 +182,7 @@
 
 				<!-- Copyright -->
 					<ul class="copyright">
-						<li>&copy; Untitled. All rights reserved.</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+						<li>&2023 Yagmur Delal Cengiz. All rights reserved.</li>
 					</ul>
 
 			</div>
