--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 	<head>
 		<title>Hello World, I'm Yagmur</title>
 		<meta charset="utf-8" />
+		<meta name="google-site-verification" content="pupvRXhL8IXRWS_WzlngPTbQh3_aS2_yAkoLSqJNogI" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
 	</head>
