--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
 					<!-- Logo -->
 						<div id="logo">
 							<span class="image avatar48"><img src="images/avatar.png" alt="" /></span>
-							<h1 id="title">Yagmur D. Cengiz</h1>
-							<p>Entrepreneur / STEM Student</p>
+							<h1 id="title">Yagmur Delal Cengiz</h1>
+							<p>Student</p>
 						</div>
 
 					<!-- Nav -->
